# JazzyIndex

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  README.md  SEGMENT_SIZE_ANALYSIS.md  TEST_IMPROVEMENTS_SUMMARY.md  THREADING_LIMITS_ANALYSIS.md  alignment_alternatives.md
.github/workflows/: tests.yml
benchmarks/: benchmark_key_value_worst_case.cpp  benchmark_main.cpp  benchmark_range_functions.cpp  benchmark_range_functions.cpp.bak  benchmark_threading_limits.cpp  dataset_generators.hpp  fixtures.hpp  generate_rmi_datasets.cpp  parallel_data_generation.hpp
benchmarks/rmi_generated/: .gitignore  README.md
docs/: BENCHMARKS.md  BENCHMARK_PARALLEL_OPTIMIZATION.md  MODEL_SELECTION.md  PARALLEL_BENCHMARK_GUIDE.md  VISUALIZATIONS.md  charts.html  generate_charts_gallery.py
docs/clang-tidy/: index.html
docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
docs/coverage/include/: index-sort-f.html  index-sort-l.html  index.html  jazzy_index.hpp.func-c.html  jazzy_index.hpp.func.html  jazzy_index.hpp.gcov.html  jazzy_index_export.hpp.func-c.html  jazzy_index_export.hpp.func.html  jazzy_index_export.hpp.gcov.html  jazzy_index_parallel.hpp.func-c.html  jazzy_index_parallel.hpp.func.html  jazzy_index_parallel.hpp.gcov.html  jazzy_index_utility.hpp.func-c.html  jazzy_index_utility.hpp.func.html  jazzy_index_utility.hpp.gcov.html
docs/images/index_data/: README.md
examples/: parallel_build_example.cpp
include/: dataset_generators.hpp  jazzy_index.hpp  jazzy_index_debug.hpp  jazzy_index_export.hpp  jazzy_index_parallel.hpp  jazzy_index_utility.hpp  quantile_index.hpp  quantile_index_utility.hpp  todo.md  todo.txt
scripts/: analyze_parallel_benchmark_limits.sh  compare_parallel_results.py  download_sosd_dataset.py  generate_docs_plots.sh  plot_benchmarks.py  plot_index_structure.py  plot_range_benchmarks.sh  run_benchmarks_parallel.sh  run_coverage.sh
tests/: README.md  gtest_binary_search_tests.cpp  gtest_boundary_tests.cpp  gtest_comparator_tests.cpp  gtest_debug_logging_tests.cpp  gtest_equal_range_tests.cpp  gtest_error_recovery_tests.cpp  gtest_fallback_tests.cpp  gtest_floating_point_tests.cpp  gtest_iterator_tests.cpp  gtest_key_value_tests.cpp  gtest_model_selection_verification.cpp  gtest_model_tests.cpp  gtest_parallel_tests.cpp  gtest_performance_tests.cpp  gtest_property_tests.cpp  gtest_segment_finder_tests.cpp  gtest_uniformity_tests.cpp  gtest_unit_tests.cpp  property_tests.cpp  unit_tests.cpp
